add work in progress image.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,7 @@
 <main role="main" class="container">
   <router-outlet></router-outlet>
 </main>
+
+<div class="text-center">
+  <img src="../assets/img/work-in-progress.jpg" alt="..." class="img-thumbnail">
+</div>
