--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,10 @@
 
 <main role="main" class="container">
   <router-outlet></router-outlet>
+
+  <!--<div class="text-center">
+    <img src="../assets/img/work-in-progress.jpg" alt="..." class="img-thumbnail">
+  </div>-->
+
 </main>
 
-<div class="text-center">
-  <img src="../assets/img/work-in-progress.jpg" alt="..." class="img-thumbnail">
-</div>
