uncomment work-in-progress img tag.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,9 @@
 <main role="main" class="container">
   <router-outlet></router-outlet>
 
-  <!--<div class="text-center">
+  <div class="text-center">
     <img src="../assets/img/work-in-progress.jpg" alt="..." class="img-thumbnail">
-  </div>-->
+  </div>
 
 </main>
 
