Product Management Module.
Completed:
1) Build product form using Bootstrap Form.
2) Implement all validation using ng2-validation.
3) CRUD operation of product form (insert, edit, update and delete of product form).
4) Display list of products in manage product click link.
5) CRDU operation based on firebase database.

To-do:
1) Add search operation in product list page.
2) Add data table in product list page for sorting, searching etc.
3) Get product key i.e. primary key from firebase database to dynamically edit product and load product details for update purpose.

--- a/src/app/admin/admin-products/admin-products.component.html
+++ b/src/app/admin/admin-products/admin-products.component.html
@@ -1,3 +1,29 @@
 <p>
-  admin-products works!
+  <a class="btn btn-primary" routerLink="/admin/products/new"> New Product</a>
 </p>
+
+<!--<p>
+  <input #query (keyup)="filter(query.value)" type="text" class="form-control" placeholder="Seach..."/>
+</p>-->
+<table class="table">
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Price</th>
+      <!--<th>Image URL</th>-->
+      <th>Action</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let p of products$ | async">
+      <td>{{p.title}}</td>
+      <td>{{p.price}}</td>
+      <!--<td><img [src]="p.imageUrl" class="card-img-top"></td>-->
+      <td><a [routerLink]="['/admin/products/', '-KrqgOLs07ZkbapP4EGi']">Edit</a></td>
+      <!--<td><a [routerLink]="['/admin/products/',p['$key']]">Edit</a></td>-->
+    </tr>
+  </tbody>
+</table>
+
+
+
