--- a/src/app/bs-navbar/bs-navbar.component.html
+++ b/src/app/bs-navbar/bs-navbar.component.html
@@ -24,7 +24,7 @@
           <a class="dropdown-item" routerLink="my/orders">My Orders</a>
           <a class="dropdown-item" routerLink="/admin/orders">Manage Orders</a>
           <a class="dropdown-item" routerLink="/admin/products">Manage Products</a>
-          <a class="dropdown-item" (click)="logout()">Log out</a>
+          <a class="dropdown-item" style="cursor:pointer;" (click)="logout()">Log out</a>
         </div>
       </li>
     </ul>
