--- a/src/app/admin/admin-products/admin-products.component.html
+++ b/src/app/admin/admin-products/admin-products.component.html
@@ -10,6 +10,7 @@
     <tr>
       <th>Title</th>
       <th>Price</th>
+      <th>Category</th>
       <!--<th>Image URL</th>-->
       <th>Action</th>
     </tr>
@@ -17,7 +18,8 @@
   <tbody>
     <tr *ngFor="let p of products$ | async">
       <td>{{p.title}}</td>
-      <td>{{p.price}}</td>
+      <td>{{p.price | currency: 'USD' : true}}</td>
+      <td>{{p.category}}</td>
       <!--<td><img [src]="p.imageUrl" class="card-img-top"></td>-->
       <td><a [routerLink]="['/admin/products/', '-KrqgOLs07ZkbapP4EGi']">Edit</a></td>
       <!--<td><a [routerLink]="['/admin/products/',p['$key']]">Edit</a></td>-->
