Added footer. Added Designed & Developed by..... in footer.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,11 @@
 <main role="main" class="container">
   <router-outlet></router-outlet>
 
-  <!--<div class="text-center">
-    <img src="../assets/img/work-in-progress.jpg" alt="..." class="img-thumbnail">
-  </div>-->
+  <div class="footer">
+    <div>
+      Designed & Developed by <b>Gajanan</b> <img class="footer-image" src="../assets/img/Photo.jpg" />
+    </div>
+  </div>
 
 </main>
 
