--- a/src/app/admin/admin-orders/admin-orders.component.html
+++ b/src/app/admin/admin-orders/admin-orders.component.html
@@ -1,3 +1,7 @@
-<p>
+<!--<p>
   admin-orders works!
-</p>
+</p>-->
+
+<div class="text-center">
+  <img src="../assets/img/work-in-progress.jpg" alt="..." class="img-thumbnail">
+</div>
