--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 
   <div class="footer">
     <div>
-      Designed & Developed by <b>Gajanan</b> <img class="footer-image" src="../assets/img/Photo.jpg" />
+      Designed & Developed by <b>Gajanan Banarase</b> <img class="footer-image" src="../assets/img/Photo.jpg" />
     </div>
   </div>
 
