--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-lg-3">
+   <div class="col-lg-3">
     <div class="sticky-top">
       <div class="list-group">
         <a class="list-group-item list-group-item-action"
@@ -28,7 +28,7 @@
               <p class="card-text">{{p.price | currency: 'USD' : true}}</p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-primary btn-block">Add to Cart</a>
+              <a href="#" class="btn btn-primary btn-block" (click)="addToCart()">Add to Cart</a>
             </div>
           </div>
         </div>
