--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -1,3 +1,7 @@
-<p>
+<!--<p>
   shopping-cart works!
-</p>
+</p>-->
+
+<div class="text-center">
+  <img src="../assets/img/work-in-progress.jpg" alt="..." class="img-thumbnail">
+</div>
