--- a/src/app/admin/admin-products/admin-products.component.html
+++ b/src/app/admin/admin-products/admin-products.component.html
@@ -5,24 +5,24 @@
 <!--<p>
   <input #query (keyup)="filter(query.value)" type="text" class="form-control" placeholder="Seach..."/>
 </p>-->
+
 <table class="table">
   <thead>
     <tr>
       <th>Title</th>
       <th>Price</th>
       <th>Category</th>
-      <!--<th>Image URL</th>-->
+      <th>Image</th>
       <th>Action</th>
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let p of products$ | async">
+    <tr *ngFor="let p of products$">
       <td>{{p.title}}</td>
       <td>{{p.price | currency: 'USD' : true}}</td>
       <td>{{p.category}}</td>
-      <!--<td><img [src]="p.imageUrl" class="card-img-top"></td>-->
-      <td><a [routerLink]="['/admin/products/', '-KrqgOLs07ZkbapP4EGi']">Edit</a></td>
-      <!--<td><a [routerLink]="['/admin/products/',p['$key']]">Edit</a></td>-->
+      <td><img src="{{p.imageUrl}}" class="product-image">  </td>
+      <td><a [routerLink]="['/admin/products/', p.productId]">Edit</a> | <a routerLink="." (click)="delete(p.productId)">Delete</a> </td>
     </tr>
   </tbody>
 </table>
