--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -28,7 +28,7 @@
         <select #category="ngModel" [(ngModel)]="product.category" name="category" id="category" class="form-control" required>
           <option value=""></option>
           <!--<option value="bread">Bread</option>-->
-          <option *ngFor="let c of categories$ | async" [value]="c.$key">
+          <option *ngFor="let c of categories$ | async" [value]="c.name">
             {{c.name}}
           </option>
         </select>
@@ -38,7 +38,7 @@
       </div>
       <div class="form-group">
         <label for="imageUrl">Image URL</label>
-        <input #imageUrl="ngModel" [(ngModel)]="product.imageUrl" name="imageUrl" id="imageUrl" type="text" class="form-control" required url />
+        <input #imageUrl="ngModel" [(ngModel)]="product.imageUrl" name="imageUrl" id="imageUrl" type="text" class="form-control" />
         <div class="alert alert-danger" *ngIf="imageUrl.touched && imageUrl.invalid">
           <div *ngIf="imageUrl.errors.required">
             Image URL is required.
