--- a/src/app/bs-navbar/bs-navbar.component.html
+++ b/src/app/bs-navbar/bs-navbar.component.html
@@ -7,27 +7,26 @@
   <div class="collapse navbar-collapse" id="navbarsExampleDefault" [ngbCollapse]="isCollapsed">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" routerLink="/">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" routerLink="/" (click)="isCollapsed = !isCollapsed">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/shopping-cart">Shopping Cart</a>
+        <a class="nav-link" routerLink="/shopping-cart" (click)="isCollapsed = !isCollapsed">Shopping Cart</a>
       </li>
       <ng-template #anonymousUser>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/login">Login</a>
+          <a class="nav-link" routerLink="/login" (click)="isCollapsed = !isCollapsed">Login</a>
         </li>
       </ng-template>
 
       <li *ngIf="authService.user$ | async as user; else anonymousUser" ngbDropdown class="nav-item dropdown">
         <a ngbDropdownToggle class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{user.displayName}}</a>
         <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown01">
-          <a class="dropdown-item" routerLink="my/orders">My Orders</a>
-          <a class="dropdown-item" routerLink="/admin/orders">Manage Orders</a>
-          <a class="dropdown-item" routerLink="/admin/products">Manage Products</a>
-          <a class="dropdown-item" style="cursor:pointer;" (click)="logout()">Log out</a>
+          <a class="dropdown-item" routerLink="my/orders" (click)="isCollapsed = !isCollapsed">My Orders</a>
+          <a class="dropdown-item" routerLink="/admin/orders" (click)="isCollapsed = !isCollapsed">Manage Orders</a>
+          <a class="dropdown-item" routerLink="/admin/products" (click)="isCollapsed = !isCollapsed">Manage Products</a>
+          <a class="dropdown-item" style="cursor:pointer;" (click)="logout(); isCollapsed = !isCollapsed ">Log out</a>
         </div>
       </li>
     </ul>
   </div>
 </nav>
-
